Push from SwaggerHub.
