# Swagger/src/IO.Swagger/wwwroot/swagger-original.json
@@ -27,7 +27,7 @@
     "description" : "Operations available to regular developers"
   } ],
   "paths" : {
-    "/inventory" : {
+    "/inventoryget" : {
       "get" : {
         "tags" : [ "developers" ],
         "summary" : "searches inventory",
@@ -77,7 +77,7 @@
                 "schema" : {
                   "type" : "array",
                   "items" : {
-                    "$ref" : "#/components/schemas/InventoryItem"
+                    "$ref" : "#/testing/get"
                   },
                   "x-content-type" : "application/json"
                 }
@@ -85,7 +85,13 @@
             }
           },
           "400" : {
-            "description" : "bad input parameter"
+            "description" : "bad input parameter",
+            "links" : {
+              "GetInventory" : {
+                "operationRef" : "https://localhost:5001/Inventory",
+                "description" : "Get Inventory."
+              }
+            }
           }
         }
       },
@@ -141,16 +147,6 @@
           "manufacturer" : {
             "$ref" : "#/components/schemas/Manufacturer"
           }
-        },
-        "example" : {
-          "releaseDate" : "2016-08-29T09:12:33.001Z",
-          "name" : "Widget Adapter",
-          "id" : "d290f1ee-6c54-4b01-90e6-d701748f0851",
-          "manufacturer" : {
-            "phone" : "408-867-5309",
-            "name" : "ACME Corporation",
-            "homePage" : "https://www.acme-corp.com"
-          }
         }
       },
       "Manufacturer" : {
@@ -170,11 +166,6 @@
             "type" : "string",
             "example" : "408-867-5309"
           }
-        },
-        "example" : {
-          "phone" : "408-867-5309",
-          "name" : "ACME Corporation",
-          "homePage" : "https://www.acme-corp.com"
         }
       },
       "Schema2" : {
